Address code review feedback: improve stub reusability and change jsr305 to compileOnly
Co-authored-by: 2020009-CPE <90688553+2020009-CPE@users.noreply.github.com>